Replaced use of deprecated Sun Base64 encoder class with one from the Apache Codec library